--- a/style.css
+++ b/style.css
@@ -323,14 +323,14 @@
 }
 @media (max-width: 992px) {
   #container {
-    height: 160px;
+    height: 190px;
     position: relative;
 		flex-direction: column;
 		width: 100%;
   }
   #content {
     flex-direction: column;
-		height: 210px;
+		height: 480px;
     justify-content: center;
     align-items: center;
   }
@@ -341,14 +341,14 @@
     margin-bottom: -5px;
   }
   .cntImg img {
-    display: none;
+    visibility: hidden;
   }
   #content2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 900px;
+    height: 500px;
   }
   .cnt2 {
     width: 315px;
@@ -369,7 +369,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 2000px;
+    height: 2300px;
   }
   .cnt-3 {
     display: flex;
@@ -380,7 +380,8 @@
     height: 275px;
   }
   #content4 {
-    height: 500px;
+    height: 450px;
+    margin-top: -99px;
     display: flex;
     flex-direction: column;
     align-items: center;
