--- a/style.css
+++ b/style.css
@@ -322,6 +322,10 @@
   }
 }
 @media (max-width: 992px) {
+  header , main , footer {
+    position: relative;
+    width: calc(100%);
+  }
   #container {
     height: 190px;
     position: relative;
