--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: 'DM Sans', sans-serif;
 }
 /* HEADER */
-#container {
+.container {
   background: linear-gradient(90deg, #000000 , #1e1e1e);
   display: flex;
   justify-content: space-around;
@@ -15,7 +15,6 @@
 .logo {
   font-weight: 800;
   letter-spacing: 2px;
-  text-decoration: none;
   font-size: 28px;
   color: #F9F9F9;
   pointer-events: none;
@@ -39,6 +38,8 @@
   color: #828282;
 }
 .menu a:hover {
+  scroll-behavior: smooth;
+  scroll-padding-top: 50px;
   background: #1E1E1E;
   color: #F9F9F9;
   border-radius: 3px;
@@ -64,6 +65,9 @@
   color: #F9F9F9;
   letter-spacing: 2px;
 }
+.cntTxt h1::first-letter {
+  color: #4f8baa;
+}
 .cntTxt p {
   color: #828282;
   padding-bottom: 18px;
@@ -73,23 +77,37 @@
 }
 /* MAIN - BUTTON */
 .bttn {
-  border-radius: 4px;
   background-color: #4f8baa;
   border: none;
-  text-align: center;
-  font-size: 20px;
+  align-items: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
   padding: 20px;
-  width: 250px;
+  width: 200px;
   transition: all 0.5s;
   cursor: pointer;
+  border-radius: 10px;
 }
-.bttn span {
+button {
+  border: none;
+  background: none;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+.bttn p {
   cursor: pointer;
-  display: inline-block;
+  color: #171717;
   position: relative;
   transition: 0.5s;
+  padding-top: 10px;
+  font-size: 20px;
 }
-.bttn span:after {
+.bttn p:after {
+  padding-top: 10px;
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -97,16 +115,12 @@
   right: -20px;
   transition: 0.5s;
 }
-.bttn:hover span {
+.bttn:hover p {
   padding-right: 25px;
 }
-.bttn:hover span:after {
+.bttn:hover p:after {
   opacity: 1;
   right: 0;
-}
-.bttn span a {
-  text-decoration: none;
-  color: #171717;
 }
 /* MAIN - SECTIN 02 */
 #content2 {
@@ -208,21 +222,24 @@
   border-bottom: 4px solid #4f8baa;
 }
 .cnt-Box a, .cnt-Box2 a, .cnt-Box3 a, .cnt-Box4 a, .cnt-Box5 a, .cnt-Box6 a {
-  padding: 5px 25px 10px 25px;
+  padding: 10px 25px 10px 25px;
   text-decoration: none;
-  color: #1E1E1E;
+  color: #F9F9F9;
   background: #828282;
   margin-top: 15px;
   border-radius: 3px;
+  transition: transform 0.3s;
 }
 .cnt-Box a:hover, .cnt-Box2 a:hover, .cnt-Box3 a:hover, .cnt-Box4 a:hover, .cnt-Box5 a:hover, .cnt-Box6 a:hover {
   background: #F9F9F9;
+  color: #4f8baa;
+  transform: scale(1.1);
 }
 .cnt-3 h3 {
   text-transform: uppercase;
   padding-bottom: 3px;
   letter-spacing: 2px;
-  font-size: 25px;
+  font-size: 1.8rem;
   color: #F9F9F9;
 }
 .cnt-3 h3::first-letter {
@@ -314,7 +331,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 65px;
+  height: 95px;
 }
 .copy p {
   color: #F9F9F9;
@@ -322,6 +339,14 @@
 }
 .copy em {
   color: #4f8baa;
+}
+.Socailmd {
+  width: 85px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.Socailmd a {
+  text-decoration: none;
 }
 /*  REPONSIVE  */
 @media ( max-width:1200px ){
@@ -339,7 +364,7 @@
     position: relative;
     width: calc(100%);
   }
-  #container {
+  .container {
     height: 190px;
     position: relative;
 		flex-direction: column;
@@ -350,9 +375,6 @@
 		height: 550px;
     justify-content: center;
     align-items: center;
-  }
-  #content .down {
-    margin-left: 20px;
   }
   .cntTxt h1 {
     margin-bottom: -5px;
